simplified installation: + kaminari-mongoid required inside gem since it always used + cleaned gemfiles + README upd

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ spec/reports
 /test_app/db/*.sqlite3
 /test_app/log/*.log
 /test_app/tmp/
+/test_app/Gemfile.lock
 /test_app/.sass-cache
 /test_app/config/mongoid.yml
 /spec/rails
