--- a/test_app/Gemfile
+++ b/test_app/Gemfile
@@ -1,20 +1,14 @@
 source 'https://rubygems.org'
 
 gem 'activeadmin-mongoid', path: '../'
-gem 'activeadmin', '~> 1.3.0'
 
-# Test app stuff
-
-gem 'rails', '~> 5.1.6'
+gem 'rails'
 
 gem 'pry'
 
 gem 'devise'
 
-gem 'mongoid', '~> 6.0.3', require: true
-gem 'kaminari', '~> 1.0'
-gem 'kaminari-mongoid'
-gem 'ransack', '<= 1.8.6'
+gem 'ransack-mongoid', github: 'activerecord-hackery/ransack-mongoid'
 
 gem 'sprockets', '>= 3.7.2'
 
